bison_code.output
Useless nonterminals

   class_dec
   class_dec_list
   extends_block
   var_dec
   var_dec_list
   method
   method_list
   arglist
   type


Terminals which are not used

   EXTENDS
   BOOL
   OR
   RETURN


Useless rules

   32 class_dec: CLASS id extends_block BTBR_R var_dec_list method_list BTBR_R

   33 class_dec_list: class_dec_list class_dec
   34               | /* empty */

   35 extends_block: EXTENDS id
   36              | /* empty */

   37 var_dec: type id SEMICOLON

   38 var_dec_list: var_dec_list var_dec
   39             | var_dec

   40 method: PUBLIC type id RNDBR_L arglist RNDBR_R BTBR_L var_dec_list stmnt_list RETURN expression SEMICOLON BTBR_R

   41 method_list: method_list method
   42            | /* empty */

   43 arglist: arglist COMMA type id
   44        | type id
   45        | /* empty */

   46 type: INT SQBR_L SQBR_R
   47     | BOOL
   48     | INT
   49     | id


Grammar

    0 $accept: goal END

    1 goal: /* empty */
    2     | main_class

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    4 stmnt_list: stmnt_list statement
    5           | statement

    6 statement: BTBR_L stmnt_list BTBR_R
    7          | IF RNDBR_L expression RNDBR_R statement ELSE statement
    8          | WHILE RNDBR_L expression RNDBR_R statement
    9          | PRINT RNDBR_L expression RNDBR_R SEMICOLON
   10          | id EQ expression SEMICOLON
   11          | id SQBR_L expression SQBR_R EQ expression SEMICOLON

   12 expression: expression AND expression
   13           | expression LESS expression
   14           | expression PLUS expression
   15           | expression MINUS expression
   16           | expression STAR expression
   17           | expression SQBR_L expression SQBR_R
   18           | expression DOT LEN
   19           | expression DOT id RNDBR_L expression_list RNDBR_R
   20           | NUM
   21           | TRUE
   22           | FALSE
   23           | id
   24           | THIS
   25           | NEW INT SQBR_L expression SQBR_R
   26           | NEW id RNDBR_L RNDBR_R
   27           | EXCL expression
   28           | RNDBR_L expression RNDBR_R

   29 expression_list: expression_list COMMA expression
   30                | expression

   31 id: ID


Terminals, with rules where they appear

END (0) 0
error (256)
IF (258) 7
ELSE (259) 7
WHILE (260) 8
CLASS (261) 3
THIS (262) 24
NEW (263) 25 26
MAIN (264) 3
PUBLIC (265) 3
EXTENDS (266)
INT (267) 25
BOOL (268)
STRING (269) 3
SQBR_L (270) 3 11 17 25
SQBR_R (271) 3 11 17 25
RNDBR_L (272) 3 7 8 9 19 26 28
RNDBR_R (273) 3 7 8 9 19 26 28
BTBR_L (274) 3 6
BTBR_R (275) 3 6
COMMA (276) 29
DOT (277) 18 19
SEMICOLON (278) 9 10 11
EQ (279) 10 11
AND (280) 12
OR (281)
PLUS (282) 14
MINUS (283) 15
STAR (284) 16
LESS (285) 13
EXCL (286) 27
FALSE (287) 22
TRUE (288) 21
PRINT (289) 9
LEN (290) 18
RETURN (291)
NUM (292) 20
ID (293) 31


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
goal (40)
    on left: 1 2, on right: 0
main_class (41)
    on left: 3, on right: 2
stmnt_list (42)
    on left: 4 5, on right: 4 6
statement (43)
    on left: 6 7 8 9 10 11, on right: 3 4 5 7 8
expression (44)
    on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28,
    on right: 7 8 9 10 11 12 13 14 15 16 17 18 19 25 27 28 29 30
expression_list (45)
    on left: 29 30, on right: 19 29
id (46)
    on left: 31, on right: 3 10 11 19 23 26


state 0

    0 $accept: . goal END

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (goal)

    goal        go to state 2
    main_class  go to state 3


state 1

    3 main_class: CLASS . id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    ID  shift, and go to state 4

    id  go to state 5


state 2

    0 $accept: goal . END

    END  shift, and go to state 6


state 3

    2 goal: main_class .

    $default  reduce using rule 2 (goal)


state 4

   31 id: ID .

    $default  reduce using rule 31 (id)


state 5

    3 main_class: CLASS id . BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    BTBR_L  shift, and go to state 7


state 6

    0 $accept: goal END .

    $default  accept


state 7

    3 main_class: CLASS id BTBR_L . PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    PUBLIC  shift, and go to state 8


state 8

    3 main_class: CLASS id BTBR_L PUBLIC . MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    MAIN  shift, and go to state 9


state 9

    3 main_class: CLASS id BTBR_L PUBLIC MAIN . RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    RNDBR_L  shift, and go to state 10


state 10

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L . STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    STRING  shift, and go to state 11


state 11

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING . SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    SQBR_L  shift, and go to state 12


state 12

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L . SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    SQBR_R  shift, and go to state 13


state 13

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R . id RNDBR_R BTBR_L statement BTBR_R BTBR_R

    ID  shift, and go to state 4

    id  go to state 14


state 14

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id . RNDBR_R BTBR_L statement BTBR_R BTBR_R

    RNDBR_R  shift, and go to state 15


state 15

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R . BTBR_L statement BTBR_R BTBR_R

    BTBR_L  shift, and go to state 16


state 16

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L . statement BTBR_R BTBR_R

    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    BTBR_L  shift, and go to state 19
    PRINT   shift, and go to state 20
    ID      shift, and go to state 4

    statement  go to state 21
    id         go to state 22


state 17

    7 statement: IF . RNDBR_L expression RNDBR_R statement ELSE statement

    RNDBR_L  shift, and go to state 23


state 18

    8 statement: WHILE . RNDBR_L expression RNDBR_R statement

    RNDBR_L  shift, and go to state 24


state 19

    6 statement: BTBR_L . stmnt_list BTBR_R

    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    BTBR_L  shift, and go to state 19
    PRINT   shift, and go to state 20
    ID      shift, and go to state 4

    stmnt_list  go to state 25
    statement   go to state 26
    id          go to state 22


state 20

    9 statement: PRINT . RNDBR_L expression RNDBR_R SEMICOLON

    RNDBR_L  shift, and go to state 27


state 21

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement . BTBR_R BTBR_R

    BTBR_R  shift, and go to state 28


state 22

   10 statement: id . EQ expression SEMICOLON
   11          | id . SQBR_L expression SQBR_R EQ expression SEMICOLON

    SQBR_L  shift, and go to state 29
    EQ      shift, and go to state 30


state 23

    7 statement: IF RNDBR_L . expression RNDBR_R statement ELSE statement

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 38
    id          go to state 39


state 24

    8 statement: WHILE RNDBR_L . expression RNDBR_R statement

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 40
    id          go to state 39


state 25

    4 stmnt_list: stmnt_list . statement
    6 statement: BTBR_L stmnt_list . BTBR_R

    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    BTBR_L  shift, and go to state 19
    BTBR_R  shift, and go to state 41
    PRINT   shift, and go to state 20
    ID      shift, and go to state 4

    statement  go to state 42
    id         go to state 22


state 26

    5 stmnt_list: statement .

    $default  reduce using rule 5 (stmnt_list)


state 27

    9 statement: PRINT RNDBR_L . expression RNDBR_R SEMICOLON

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 43
    id          go to state 39


state 28

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R . BTBR_R

    BTBR_R  shift, and go to state 44


state 29

   11 statement: id SQBR_L . expression SQBR_R EQ expression SEMICOLON

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 45
    id          go to state 39


state 30

   10 statement: id EQ . expression SEMICOLON

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 46
    id          go to state 39


state 31

   24 expression: THIS .

    $default  reduce using rule 24 (expression)


state 32

   25 expression: NEW . INT SQBR_L expression SQBR_R
   26           | NEW . id RNDBR_L RNDBR_R

    INT  shift, and go to state 47
    ID   shift, and go to state 4

    id  go to state 48


state 33

   28 expression: RNDBR_L . expression RNDBR_R

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 49
    id          go to state 39


state 34

   27 expression: EXCL . expression

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 50
    id          go to state 39


state 35

   22 expression: FALSE .

    $default  reduce using rule 22 (expression)


state 36

   21 expression: TRUE .

    $default  reduce using rule 21 (expression)


state 37

   20 expression: NUM .

    $default  reduce using rule 20 (expression)


state 38

    7 statement: IF RNDBR_L expression . RNDBR_R statement ELSE statement
   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L   shift, and go to state 51
    RNDBR_R  shift, and go to state 52
    DOT      shift, and go to state 53
    AND      shift, and go to state 54
    PLUS     shift, and go to state 55
    MINUS    shift, and go to state 56
    STAR     shift, and go to state 57
    LESS     shift, and go to state 58


state 39

   23 expression: id .

    $default  reduce using rule 23 (expression)


state 40

    8 statement: WHILE RNDBR_L expression . RNDBR_R statement
   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L   shift, and go to state 51
    RNDBR_R  shift, and go to state 59
    DOT      shift, and go to state 53
    AND      shift, and go to state 54
    PLUS     shift, and go to state 55
    MINUS    shift, and go to state 56
    STAR     shift, and go to state 57
    LESS     shift, and go to state 58


state 41

    6 statement: BTBR_L stmnt_list BTBR_R .

    $default  reduce using rule 6 (statement)


state 42

    4 stmnt_list: stmnt_list statement .

    $default  reduce using rule 4 (stmnt_list)


state 43

    9 statement: PRINT RNDBR_L expression . RNDBR_R SEMICOLON
   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L   shift, and go to state 51
    RNDBR_R  shift, and go to state 60
    DOT      shift, and go to state 53
    AND      shift, and go to state 54
    PLUS     shift, and go to state 55
    MINUS    shift, and go to state 56
    STAR     shift, and go to state 57
    LESS     shift, and go to state 58


state 44

    3 main_class: CLASS id BTBR_L PUBLIC MAIN RNDBR_L STRING SQBR_L SQBR_R id RNDBR_R BTBR_L statement BTBR_R BTBR_R .

    $default  reduce using rule 3 (main_class)


state 45

   11 statement: id SQBR_L expression . SQBR_R EQ expression SEMICOLON
   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L  shift, and go to state 51
    SQBR_R  shift, and go to state 61
    DOT     shift, and go to state 53
    AND     shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    LESS    shift, and go to state 58


state 46

   10 statement: id EQ expression . SEMICOLON
   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L     shift, and go to state 51
    DOT        shift, and go to state 53
    SEMICOLON  shift, and go to state 62
    AND        shift, and go to state 54
    PLUS       shift, and go to state 55
    MINUS      shift, and go to state 56
    STAR       shift, and go to state 57
    LESS       shift, and go to state 58


state 47

   25 expression: NEW INT . SQBR_L expression SQBR_R

    SQBR_L  shift, and go to state 63


state 48

   26 expression: NEW id . RNDBR_L RNDBR_R

    RNDBR_L  shift, and go to state 64


state 49

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R
   28           | RNDBR_L expression . RNDBR_R

    SQBR_L   shift, and go to state 51
    RNDBR_R  shift, and go to state 65
    DOT      shift, and go to state 53
    AND      shift, and go to state 54
    PLUS     shift, and go to state 55
    MINUS    shift, and go to state 56
    STAR     shift, and go to state 57
    LESS     shift, and go to state 58


state 50

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R
   27           | EXCL expression .

    $default  reduce using rule 27 (expression)


state 51

   17 expression: expression SQBR_L . expression SQBR_R

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 66
    id          go to state 39


state 52

    7 statement: IF RNDBR_L expression RNDBR_R . statement ELSE statement

    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    BTBR_L  shift, and go to state 19
    PRINT   shift, and go to state 20
    ID      shift, and go to state 4

    statement  go to state 67
    id         go to state 22


state 53

   18 expression: expression DOT . LEN
   19           | expression DOT . id RNDBR_L expression_list RNDBR_R

    LEN  shift, and go to state 68
    ID   shift, and go to state 4

    id  go to state 69


state 54

   12 expression: expression AND . expression

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 70
    id          go to state 39


state 55

   14 expression: expression PLUS . expression

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 71
    id          go to state 39


state 56

   15 expression: expression MINUS . expression

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 72
    id          go to state 39


state 57

   16 expression: expression STAR . expression

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 73
    id          go to state 39


state 58

   13 expression: expression LESS . expression

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 74
    id          go to state 39


state 59

    8 statement: WHILE RNDBR_L expression RNDBR_R . statement

    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    BTBR_L  shift, and go to state 19
    PRINT   shift, and go to state 20
    ID      shift, and go to state 4

    statement  go to state 75
    id         go to state 22


state 60

    9 statement: PRINT RNDBR_L expression RNDBR_R . SEMICOLON

    SEMICOLON  shift, and go to state 76


state 61

   11 statement: id SQBR_L expression SQBR_R . EQ expression SEMICOLON

    EQ  shift, and go to state 77


state 62

   10 statement: id EQ expression SEMICOLON .

    $default  reduce using rule 10 (statement)


state 63

   25 expression: NEW INT SQBR_L . expression SQBR_R

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 78
    id          go to state 39


state 64

   26 expression: NEW id RNDBR_L . RNDBR_R

    RNDBR_R  shift, and go to state 79


state 65

   28 expression: RNDBR_L expression RNDBR_R .

    $default  reduce using rule 28 (expression)


state 66

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   17           | expression SQBR_L expression . SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L  shift, and go to state 51
    SQBR_R  shift, and go to state 80
    DOT     shift, and go to state 53
    AND     shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    LESS    shift, and go to state 58


state 67

    7 statement: IF RNDBR_L expression RNDBR_R statement . ELSE statement

    ELSE  shift, and go to state 81


state 68

   18 expression: expression DOT LEN .

    $default  reduce using rule 18 (expression)


state 69

   19 expression: expression DOT id . RNDBR_L expression_list RNDBR_R

    RNDBR_L  shift, and go to state 82


state 70

   12 expression: expression . AND expression
   12           | expression AND expression .
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L  shift, and go to state 51
    DOT     shift, and go to state 53
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    LESS    shift, and go to state 58

    AND  error (nonassociative)

    $default  reduce using rule 12 (expression)


state 71

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   14           | expression PLUS expression .
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L  shift, and go to state 51
    DOT     shift, and go to state 53
    STAR    shift, and go to state 57

    $default  reduce using rule 14 (expression)


state 72

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   15           | expression MINUS expression .
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L  shift, and go to state 51
    DOT     shift, and go to state 53
    STAR    shift, and go to state 57

    $default  reduce using rule 15 (expression)


state 73

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   16           | expression STAR expression .
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L  shift, and go to state 51
    DOT     shift, and go to state 53

    $default  reduce using rule 16 (expression)


state 74

   12 expression: expression . AND expression
   13           | expression . LESS expression
   13           | expression LESS expression .
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L  shift, and go to state 51
    DOT     shift, and go to state 53
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57

    LESS  error (nonassociative)

    $default  reduce using rule 13 (expression)


state 75

    8 statement: WHILE RNDBR_L expression RNDBR_R statement .

    $default  reduce using rule 8 (statement)


state 76

    9 statement: PRINT RNDBR_L expression RNDBR_R SEMICOLON .

    $default  reduce using rule 9 (statement)


state 77

   11 statement: id SQBR_L expression SQBR_R EQ . expression SEMICOLON

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 83
    id          go to state 39


state 78

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R
   25           | NEW INT SQBR_L expression . SQBR_R

    SQBR_L  shift, and go to state 51
    SQBR_R  shift, and go to state 84
    DOT     shift, and go to state 53
    AND     shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    LESS    shift, and go to state 58


state 79

   26 expression: NEW id RNDBR_L RNDBR_R .

    $default  reduce using rule 26 (expression)


state 80

   17 expression: expression SQBR_L expression SQBR_R .

    $default  reduce using rule 17 (expression)


state 81

    7 statement: IF RNDBR_L expression RNDBR_R statement ELSE . statement

    IF      shift, and go to state 17
    WHILE   shift, and go to state 18
    BTBR_L  shift, and go to state 19
    PRINT   shift, and go to state 20
    ID      shift, and go to state 4

    statement  go to state 85
    id         go to state 22


state 82

   19 expression: expression DOT id RNDBR_L . expression_list RNDBR_R

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression       go to state 86
    expression_list  go to state 87
    id               go to state 39


state 83

   11 statement: id SQBR_L expression SQBR_R EQ expression . SEMICOLON
   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R

    SQBR_L     shift, and go to state 51
    DOT        shift, and go to state 53
    SEMICOLON  shift, and go to state 88
    AND        shift, and go to state 54
    PLUS       shift, and go to state 55
    MINUS      shift, and go to state 56
    STAR       shift, and go to state 57
    LESS       shift, and go to state 58


state 84

   25 expression: NEW INT SQBR_L expression SQBR_R .

    $default  reduce using rule 25 (expression)


state 85

    7 statement: IF RNDBR_L expression RNDBR_R statement ELSE statement .

    $default  reduce using rule 7 (statement)


state 86

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R
   30 expression_list: expression .

    SQBR_L  shift, and go to state 51
    DOT     shift, and go to state 53
    AND     shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    LESS    shift, and go to state 58

    $default  reduce using rule 30 (expression_list)


state 87

   19 expression: expression DOT id RNDBR_L expression_list . RNDBR_R
   29 expression_list: expression_list . COMMA expression

    RNDBR_R  shift, and go to state 89
    COMMA    shift, and go to state 90


state 88

   11 statement: id SQBR_L expression SQBR_R EQ expression SEMICOLON .

    $default  reduce using rule 11 (statement)


state 89

   19 expression: expression DOT id RNDBR_L expression_list RNDBR_R .

    $default  reduce using rule 19 (expression)


state 90

   29 expression_list: expression_list COMMA . expression

    THIS     shift, and go to state 31
    NEW      shift, and go to state 32
    RNDBR_L  shift, and go to state 33
    EXCL     shift, and go to state 34
    FALSE    shift, and go to state 35
    TRUE     shift, and go to state 36
    NUM      shift, and go to state 37
    ID       shift, and go to state 4

    expression  go to state 91
    id          go to state 39


state 91

   12 expression: expression . AND expression
   13           | expression . LESS expression
   14           | expression . PLUS expression
   15           | expression . MINUS expression
   16           | expression . STAR expression
   17           | expression . SQBR_L expression SQBR_R
   18           | expression . DOT LEN
   19           | expression . DOT id RNDBR_L expression_list RNDBR_R
   29 expression_list: expression_list COMMA expression .

    SQBR_L  shift, and go to state 51
    DOT     shift, and go to state 53
    AND     shift, and go to state 54
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    LESS    shift, and go to state 58

    $default  reduce using rule 29 (expression_list)
